static/css/main.css
/* RESET CSS */
html, body, div, span, applet, object, iframe,
h1, h2, h3, h4, h5, h6, p, blockquote, pre,
a, abbr, acronym, address, big, cite, code,
del, dfn, em, img, ins, kbd, q, s, samp,
small, strike, strong, sub, sup, tt, var,
b, u, i, center,
dl, dt, dd, ol, ul, li,
fieldset, form, label, legend,
table, caption, tbody, tfoot, thead, tr, th, td,
article, aside, canvas, details, embed, 
figure, figcaption, footer, header, hgroup, 
menu, nav, output, ruby, section, summary,
time, mark, audio, video {
	margin: 0;
	padding: 0;
	border: 0;
	font-size: 100%;
	font: inherit;
	vertical-align: baseline;
}
/* HTML5 display-role reset for older browsers */
article, aside, details, figcaption, figure, 
footer, header, hgroup, menu, nav, section {
	display: block;
}
body {
	line-height: 1;
}
ol, ul {
	list-style: none;
}
blockquote, q {
	quotes: none;
}
blockquote:before, blockquote:after,
q:before, q:after {
	content: '';
	content: none;
}
table {
	border-collapse: collapse;
	border-spacing: 0;
}

/* CUSTOM CSS */
a:hover {
    text-decoration: none;
}
.row {
    margin-left: 0px;
}
@media screen and (min-width: 991.5px) {
    #top-nav {
        background-color: #b8326e;
        color: white;
        height: 44px;
        width: 100%;
        font-family: 'Open Sans', Helvetica, sans-serif;
        font-weight: 700;
        font-size: 13px;
    }
}
@media screen and (max-width: 991.5px) {
    #top-nav {
        display: none;
    }
}
#donate-btn {
    height: 100%;
    width: 77px;
    padding: 14px;
    box-sizing: border-box;
    border-top: 3px solid #eecedcb7;
    border-right: .5px solid #eecedcb7;
    border-left: .5px solid #eecedcb7;
    color: white;
}
#donate-btn:hover {
    background-color: rgba(255, 255, 255, 0.075);
    color: white;
}
#nav-menu {
    height: 118px;
    width: 100%;
    background-color: rgb(214, 214, 214);
    box-sizing: border-box;font-family: 'Montserrat', Helvetica, sans-serif;
    font-size: 14px;
    font-weight: 700;
}
#site-logo {
    width: 25%;
    height: 118px;
    padding: 20px 0px;
    display: inline-block;
}
#site-logo img {
    max-width: 100%;
    max-height: 100%;
}
@media (min-width: 991.5px) {
    #menu-links-box {
        vertical-align: top;
        width: 74.5%;
        padding-left: 10%;
        padding-top: 51px;
        padding-bottom: 51px;
        text-align: right;
        box-sizing: border-box;
        display: inline-block;
    }
}
@media (max-width: 991.5px) {
    #menu-links-box {
        display: none;
    }
}

.menu-link {
    display: inline-block;
    margin-left: 6.4%;
    padding-bottom: 4px;
}
.menu-link a {
    color: #232424;
}
.menu-link:hover {
    border-bottom: 2px solid #f2cb05;
}
#menu-icon {
    width: 50px;
    height: 50px;
    background-size: contain;
    background-repeat: no-repeat;
    text-align: right;
    display: inline-block;
    margin: 34px 0px;
    box-sizing: border-box;
}
#menu-icon img {
    max-width: 100%;
    max-height: 100%;
    padding-top: 12px;
}

